모듈 변경 추가함

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,7 @@ name = "game_engine_2d"
 version = "0.1.0"
 authors = ["Yeonho Jang <siabard@gmail.com>"]
 
-[dependencies]
-sdl2 = "*"
+[dependencies.sdl2]
+version = "*"
+default-features = false
+features = ["ttf","image","gfx","mixer"]
